# ble

./: gradle.properties  settings.gradle
ConfigSdkLibrary/: build.gradle  gradle.properties  (+1 more)
FoundationLibrary/: CMakeLists.txt  build.gradle
FoundationLibrary/src/androidTest/java/com/qdingnet/access/foundationlibrary/: ExampleInstrumentedTest.java
FoundationLibrary/src/main/: AndroidManifest.xml
FoundationLibrary/src/main/java/com/qdingnet/opendoor/client/: BluetoothClient.java  WifiClient.java
FoundationLibrary/src/main/java/com/qdingnet/opendoor/client/internal/: ClientCloseable.java
FoundationLibrary/src/main/java/com/qdingnet/opendoor/core/bean/: DataPacket.java
FoundationLibrary/src/main/java/com/qdingnet/opendoor/core/bluetooth/: BluetoothLeClass.java
FoundationLibrary/src/main/java/com/qdingnet/opendoor/core/callback/: ICloseCallback.java  ICloseable.java  IStateCallback.java
FoundationLibrary/src/main/java/com/qdingnet/opendoor/log/: Logdeal.java
FoundationLibrary/src/main/java/com/qdingnet/opendoor/utils/: AESUtil.java  Base64.java  CharEncoding.java  Hex.java
FoundationLibrary/src/main/java/com/qdingnet/qdaccess/: ProtocolHelper.java  QDAccessMsgHandler.java  QDConfigMsgHandler.java  QDDeviceConfigEntity.java  QDDeviceSdkMsgHandler.java  QDDeviceTestInfo.java  QDDeviceTestNotify.java  QDFactoryTestMsgHandler.java  QDPassRecordEntity.java  QDRFCardItem.java  QDUnitItem.java
FoundationLibrary/src/main/java/com/qdingnet/qdaccess/msg/: QDBuffer.java  QdAccessContent.java  QdAccessMsg.java  QdMsgParser.java  QdPassRecordItem.java
FoundationLibrary/src/main/jni/access/: Android.mk  Application.mk  CJavaMethodManager.cpp  CJavaMethodManager.h  CMakeLists.txt  CMsgProcessor.cpp  CMsgProcessor.h  CQDAccessJniApi.cpp  CQDAccessJniApi.h  JNI_Methods.h  JNI_Methods.hpp  JNI_OnLoad.cpp  Makefile  QDAccess.cpp  QDPassRecordEntity.cpp  QDPassRecordEntity.h  berlekamp.h  common_struct.h  debugLog.h  galois.h  galois_new.h  inter.h  meshsub.c  meshsub.h  qd_access_cmd_define.h  qd_access_protocol_define.h  qd_access_protocol_helper.c  qd_access_protocol_helper.h  qd_access_protocol_helper_private.c  qd_access_protocol_helper_private.h  qd_access_protocol_v2_define.h  qd_access_protocol_v2_helper.c  qd_access_protocol_v2_helper.h  qd_access_protocol_v2_helper_private.c  qd_access_protocol_v2_helper_private.h  qd_access_protocol_v2_standalone_card.c  qd_access_protocol_v2_standalone_card.h  qd_ble_hook_msg_define.h  qd_common_utils.c  qd_common_utils.h  (+3 more)
FoundationLibrary/src/main/jni/secure/: CMakeLists.txt  JNI_Secure_Methods.h  QDSecure.cpp  config.h  md5.h
FoundationLibrary/src/main/res/values/: strings.xml
FoundationLibrary/src/test/java/com/qdingnet/access/foundationlibrary/: ExampleUnitTest.java
(+138 files in other folders)
